Git Tests/force-app/main/default/default/objects/DestinatarioReserva__c/DestinatarioReserva__c.object-meta.xml
<CustomObject>
    <label>Destinatário da reserva</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Nome de Destinatário da reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destinatários da reserva</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>