Git Tests/force-app/main/default/default/objects/DestinatarioReserva__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <externalId>true</externalId>
    <label>Chave única</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>