Git Tests/force-app/main/default/default/objects/DestinatarioReserva__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Destinatários da reserva</relationshipLabel>
    <relationshipName>DestinatariosReserva</relationshipName>
    <type>Lookup</type>
</CustomField>