Git Tests/force-app/main/default/default/objects/DestinatarioReserva__c/fields/GrupoClientes__c.field-meta.xml
<CustomField>
    <fullName>GrupoClientes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de clientes</label>
    <referenceTo>GrupoCliente__c</referenceTo>
    <relationshipLabel>Destinatários da reserva</relationshipLabel>
    <relationshipName>DestinatariosReserva</relationshipName>
    <type>Lookup</type>
</CustomField>