Git Tests/force-app/main/default/default/objects/DestinatarioReserva__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <label>Reserva</label>
    <referenceTo>Reserva__c</referenceTo>
    <relationshipLabel>Destinatários da reserva</relationshipLabel>
    <relationshipName>DestinatariosReserva</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>